tests/cases/error/error_failing_instruction.rapt
# line 1
RUN /missing
# line 3
